--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="img-description" id="image-info">
           </div>
         </div>
-        <a href="${data.hdurl}" target="_blank" class="btn btn-primary fw-bold" id="view">VIEW FULL IMAGE</a>
+        <a href="..." target="_blank" class="btn btn-primary fw-bold" id="view">VIEW FULL IMAGE</a>
       </div>
     </div>
 
